Pagina FAQ revisada e responsiva

--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -150,24 +150,25 @@
             <div class="bannerFaq">
                 <h1>Perguntas Frequentes</h1>
             </div>    
+            <div class="container">
             <div class="container1_perguntasfrequentes">
                 <div class="texto_perguntasfrequentes">
                     <!-- <img src="img/sonhar-com-mercado.png" alt=" Dúvidas Mercado"> -->
-                    <h2>Perguntas 1</h2>
-                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                    <h2>Perguntas 1</h2>
-                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                    <h2>Perguntas 1</h2>
-                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                    <h2>Pergunta 1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
+                    <h2>Pergunta 2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
+                    <h2>Pergunta 3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
                 <!-- </div>
                 <div class="text_perguntasfrequentes"> -->
                     <!-- <img src="img/armario.png " alt="Dúvidas Vestuário"> -->
-                    <h2>Perguntas 1</h2>
-                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                    <h2>Perguntas 1</h2>
-                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
-                    <h2>Perguntas 1</h2>
-                    <p>Resposta 1 Resposta 1 Resposta 1 Resposta 1 Resposta 1</p>
+                    <h2>Pergunta 4</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
+                    <h2>Pergunta 5</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
+                    <h2>Pergunta 6</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
                 </div>
                 <div class="duvidas_perguntasfrequentes">
                     <h4>Não encontrou sua dúvida, escreva pra nós</h4>
@@ -180,6 +181,7 @@
                     <button type="submit" id="enviar">ENVIAR</button>
                 </div>
             </div>
+        </div>
         </div>
         </main>
         <footer>
