--- a/paginaRanking.html
+++ b/paginaRanking.html
@@ -15,11 +15,14 @@
         <div class="container">
             <div class="ca">
                 <div class="logo">
-                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
+                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale"
+                            alt="logo smart sale"></a>
                 </div>
-                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
+                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca"
+                    name="search">
                 <div class="botao-login">
-                    <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
+                    <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login"
+                            title="Faça login" id="entrar">
                         <p>Entrar</p>
                     </a>
                 </div>
@@ -46,7 +49,27 @@
             <div class="div">
                 <section class="descricao">
                     <h3>Sobre o ranking</h3>
-                    <p>Descrição do ranking: quem entra nele, como entra, influência na causa e tudo mais</p>
+                    <br>
+                    <p>Este ranking mostra os clientes que mais fizeram compras em nossa aplicação, merecem ser
+                        enaltecidas por economizarem em suas compras e evitando o desperdício de produtos que
+                        eventualmente poderiam ser descartados. O ranking dos vendedores enaltece quem doa seus produtos
+                        que não são vendidos, também evitando desperdício e colaborando para uma ONG que fará bom uso
+                        desses produtos.
+                    </p>
+                    <br>
+                    <p>
+
+                        Você pode estar em uma boa colocação no ranking ao comprar produtos com pontos, quanto mais
+                        produtos você comprar, mais pontos você acumula. Dessa forma, é incentivado a compra de produtos
+                        não destinados à doação para que não haja desperdício desse produto por conta de venda.
+                    </p>
+                    <br>
+                    <p>
+
+                        A causa desse ranking é apresentar os compradores preocupados com a causa, quem opta por
+                        economizar e também por ajudar os vendedores a não sofrerem prejuízo com produtos desperdiçados
+                        ou descartados.
+                    </p>
                 </section>
                 <section class="ranking">
                     <h3>Ranking</h3>
@@ -135,7 +158,8 @@
             </div>
             <br>
             <div class="botao">
-                <a href="perfil.html" class="a-botao" title="Ir para o perfil">Descubra a sua pontuação em seu perfil!</a>
+                <a href="perfil.html" class="a-botao" title="Ir para o perfil">Descubra a sua pontuação em seu
+                    perfil!</a>
             </div>
         </div>
     </main>
