Pagina Quem Somos Responsiva

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -38,10 +39,12 @@
                 </div>
             </nav>
         </div>
+        </div>
     </header>
     <main>
         <div class="quemsomos_pag">
             <div class="bannerquemsomos"></div>
+            <div class="container">
             <div class="tudo">
                 <div class="caixao">
                     <div class="one">
@@ -60,8 +63,11 @@
                         </p>
                     </div>
                 </div>
-                <img src="img/União 19.png" alt="Imagem ampliada do Logo do Site">
+                <div class="contImagem">
+                    <img src="img/União 19.png" alt="Imagem ampliada do Logo do Site">
+                </div>
             </div>
+        </div>
         </div>
     </main>
     <footer>
