--- a/ONG's.html
+++ b/ONG's.html
@@ -44,6 +44,7 @@
 </head>
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -72,10 +73,12 @@
                 </div>
             </nav>
         </div>
+        </div>
     </header>
     <main>
         <div class="ongs_pag">
             <div class="container">
+            <div class="containerOngs">
                 <section class="conteudo">
                     <img src="img/mais.png" alt="ONG mais">
                     <div class="texto">
@@ -121,6 +124,7 @@
                     </div>
                 </section>
             </div>
+        </div>
         </div>
     </main>
     <footer>
