--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -114,79 +114,94 @@
         }
     </style> -->
 
-    <body>    
-        <header>
-            <div class="container">
-                <div class="ca">
-                    <div class="logo">
-                        <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
-                    </div>
-                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
-                    <div class="botao-login">
-                        <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
-                            <p>Entrar</p>
-                        </a>
-                    </div>
+<body>
+    <header>
+        <div class="container">
+            <div class="ca">
+                <div class="logo">
+                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale"
+                            alt="logo smart sale"></a>
                 </div>
-                <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
-                <a class="btn-close"><i class="fa fa-times"></i></a>
-                <nav>
-                    <div class="menu-centro">
-                        <ul class="menu">
-                            <li><a href="home.html" title="Smart sale home">Home</a></li>
-                            <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
-                            <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
-                            <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
-                            <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
-                            <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
-                            <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
-                        </ul>
-                    </div>
-                </nav>
+                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca"
+                    name="search">
+                <div class="botao-login">
+                    <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login"
+                            title="Faça login" id="entrar">
+                        <p>Entrar</p>
+                    </a>
+                </div>
             </div>
-        </header>
-        <main>
-            <div class="faq_pag">
+            <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
+            <a class="btn-close"><i class="fa fa-times"></i></a>
+            <nav>
+                <div class="menu-centro">
+                    <ul class="menu">
+                        <li><a href="home.html" title="Smart sale home">Home</a></li>
+                        <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
+                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
+                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
+                        <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
+                        <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div class="faq_pag">
             <div class="bannerFaq">
                 <h1>Perguntas Frequentes</h1>
-            </div>    
+            </div>
             <div class="container">
-            <div class="container1_perguntasfrequentes">
-                <div class="texto_perguntasfrequentes">
-                    <!-- <img src="img/sonhar-com-mercado.png" alt=" Dúvidas Mercado"> -->
-                    <h2>Pergunta 1</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
-                    <h2>Pergunta 2</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
-                    <h2>Pergunta 3</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
-                <!-- </div>
-                <div class="text_perguntasfrequentes"> -->
-                    <!-- <img src="img/armario.png " alt="Dúvidas Vestuário"> -->
-                    <h2>Pergunta 4</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
-                    <h2>Pergunta 5</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
-                    <h2>Pergunta 6</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis quae suscipit quos facere!</p>
-                </div>
-                <div class="duvidas_perguntasfrequentes">
-                    <h4>Não encontrou sua dúvida, escreva pra nós</h4>
-                    <label>
-                        <input type="text" placeholder="Escreva sua dúvida..." aria-label="Digite sua dúvida..."
-                            name="Dúvidas" required>
-                    </label>
-                </div>
-                <div class="enviar_perguntasfrequentes">
-                    <button type="submit" id="enviar">ENVIAR</button>
+                <div class="container1_perguntasfrequentes">
+                    <div class="texto_perguntasfrequentes">
+
+                        <h2>Como fazer compras na aplicação?</h2>
+                        <p>Para fazer suas compras na aplicação você deve clicar no botão para reservar o produto
+                            desejado.</p>
+
+                        <h2>Como vendo minhas mercadorias?</h2>
+                        <p>Basta você efetuar um cadastro de vendedor na página de login (é necessário um CNPJ) e
+                            cadastrar suas mercadorias.</p>
+
+                        <h2>Como o produto chega até mim?</h2>
+                        <p>Após ter feita a reserva, você efetua o pagamento e retira seu produto com o próprio
+                            vendedor.
+                        </p>
+
+                        <h2>Como entro no ranking?
+                        </h2>
+                        <p>Você entra no ranking como cliente comprando os produtos que contém pontos, e entra como
+                            vendedor ao encaminhar seus produtos para doação.
+                        </p>
+
+                        <h2>Quais são as ONGs beneficiadas pela aplicação?
+                        </h2>
+                        <p>Você pode conferir as ONGs beneficiadas na página ONGs.
+                        </p>
+
+                        <!-- <h2>Pergunta 6</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis
+                            quae suscipit quos facere!</p> -->
+                    </div>
+                    <div class="duvidas_perguntasfrequentes">
+                        <h4>Não encontrou sua dúvida, escreva pra nós</h4>
+                        <label>
+                            <input type="text" placeholder="Escreva sua dúvida..." aria-label="Digite sua dúvida..."
+                                name="Dúvidas" required>
+                        </label>
+                    </div>
+                    <div class="enviar_perguntasfrequentes">
+                        <button type="submit" id="enviar">ENVIAR</button>
+                    </div>
                 </div>
             </div>
         </div>
-        </div>
-        </main>
-        <footer>
-            <p>SMART SALE ©2019</p>
-        </footer>
-    </body>
+    </main>
+    <footer>
+        <p>SMART SALE ©2019</p>
+    </footer>
+</body>
 
 </html>
