--- a/cadastrodeprodutovenda.html
+++ b/cadastrodeprodutovenda.html
@@ -243,6 +243,7 @@
 
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -270,6 +271,7 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
     <main>
