--- a/cadastrodevendedor.html
+++ b/cadastrodevendedor.html
@@ -1,249 +1,15 @@
  <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro de Vendedor</title>
-    <link rel="stylesheet" href="css/final.css">
-    <!-- <style>
-        :root {
-            --roxo: #A200CB;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        header {
-            height: 130px;
-            display: flex;
-            justify-content: space-between;
-            align-content: center;
-            background-color: #A200CB;
-        }
-
-        .container img {
-            height: 95px;
-            width: 204px;
-        }
-
-        .container {
-            width: 1200px;
-            margin: auto;
-        }
-
-        .container input {
-            width: 605px;
-            height: 35px;
-            margin-left: -120px;
-        }
-
-        .menu-centro {
-            display: flex;
-            justify-content: center;
-        }
-
-        .ca {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        .ca a {
-            text-decoration: none;
-            color: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .botao-login {
-            display: flex;
-            justify-content: flex-end;
-        }
-
-        #entrar {
-            width: 30px;
-            height: 35px;
-            margin: 10px;
-        }
-
-        .menu {
-            list-style: none;
-            display: flex;
-            justify-content: space-between;
-            width: 600px;
-            align-items: center;
-            font-size: 12px;
-        }
-
-        .menu a {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-decoration: none;
-            text-transform: uppercase;
-            color: white;
-        }
-
-        footer {
-            background-image: linear-gradient(to right, rgb(162, 0, 203), rgb(20, 204, 138));
-            color: white;
-            font-size: 18px;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            text-align: center;
-            height: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-
-        /*Conteudo*/
-        :root{
-            --roxo: #A200CB;
-            --cinza: grey;
-        }
-        main {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
-
-        .cardscadastrovendedor h3 {
-            padding-top: 20px;
-            color: var(--roxo);
-            text-transform: uppercase;
-            padding-bottom: 5px;
-            text-align: center;
-        }
-
-        .cardscadastrovendedor label, input {
-            color: #707070;
-        }
-
-        .cardscadastrovendedor {
-            width: 550px;
-            margin: auto;
-            display: flex;
-            justify-content: space-around;
-            margin-top: 50px;
-            margin-bottom: 50px;
-        }
-
-        .informacao_cadastrovendedor {
-            display: flex;
-            flex-direction: column;
-            border: solid 1px #707070;
-            border-radius: 8px;
-            padding: 0px 30px;
-            height: 250px;
-            justify-content: flex-start;
-            width: 190px;
-            background-color: white;
-        }
-
-        .cardscadastrovendedor .cadvend {
-            display: flex;
-            flex-direction: column;
-            width: 190px;
-            border: solid 1px #707070;
-            border-radius: 8px;
-            padding: 0px 30px;
-            padding-bottom: 50px;
-            justify-content: center;
-            background-color: white;
-            align-items: center;
-        }
-
-        .cardscadastrovendedor .cadastro2 {
-            display: flex;
-            flex-direction: column;
-            padding: 9px;
-        }
-
-        .cardscadastrovendedor .cadvend form input {
-            width: 160px;
-            padding: 5px;
-        }
-
-        .cardscadastrovendedor button {
-            padding: 10px 20px;
-            background-color: var(--roxo);
-            border-radius: 4px;
-            border: solid 1px var(--roxo);
-            color: white;
-        }
-
-        .btn_cadastrovendedor {
-            display: flex;
-            justify-content: center;
-            margin: auto;
-            padding-bottom: 10px;
-        }
-        @media (max-width: 1024px){
-            *{
-                font-size: 20px;
-            }
-            .cadvend_cadastrovendedor{
-                width: 290px;
-            }
-            .cardscadastrovendedor{
-                width: 800px;
-            }
-            .informacao_cadastrovendedor{
-                width: 300px;
-            }
-            main {
-                width: 1000px;
-                margin: auto;
-            }
-            form {
-                line-height: 1.5em;
-                width: 210px;
-            }
-            .informacao_cadastrovendedor{
-                height: 300px;
-            }
-            button{
-                margin-top:  30px
-            }
-        }
-        @media (max-width: 767px){
-            main{
-                width: 700px;
-                margin: auto;
-                display: flex;
-                flex-wrap: wrap;    
-            }
-            .cardscadastrovendedor{
-                display: flex;
-                flex-direction: column;
-                width: 350px;
-                margin: auto;
-            }
-            .cadvend_cadastrovendedor{
-                width: 300px;
-            }
-            .informacao_cadastrovendedor{
-                width: 300px;
-                margin-bottom: 10px;
-            }
-            .cadastro2_cadastrovendedor{
-                width: 200px;
-                margin: auto;
-                display: flex;
-                flex-direction: column;
-                flex-wrap: wrap;
-            }
-            form{
-                margin: auto;
-            }
-        }
-     </style> -->
+    <link rel="stylesheet" href="css/final.css">    
 </head>
-
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -271,6 +37,7 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
     <main>
