--- a/cadastroelogin.html
+++ b/cadastroelogin.html
@@ -176,6 +176,7 @@
 
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -203,6 +204,7 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
     <main>
