--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
 
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -43,6 +44,7 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
     <main>
