--- a/paginaRanking.html
+++ b/paginaRanking.html
@@ -11,6 +11,7 @@
 
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -41,6 +42,7 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
     <main>
