--- a/perfil.html
+++ b/perfil.html
@@ -13,6 +13,7 @@
 
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -40,6 +41,7 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
     <main>
