--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -14,6 +14,7 @@
 </head>
 <body>
     <header>
+        <div class="contHeader">
         <div class="container">
             <div class="ca">
                 <div class="logo">
@@ -41,6 +42,7 @@
                     </ul>
                 </div>
             </nav>
+        </div>
         </div>
     </header>
     <main>
