Adicionado Alt na Home e Final da Reserva

--- a/cabecalhoerodape.html
+++ b/cabecalhoerodape.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="ca">
                 <div class="logo">
-                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
+                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="Logo Smart Sale"></a>
                 </div>
                 <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
                 <div class="botao-login">
