--- a/finalDaReserva.html
+++ b/finalDaReserva.html
@@ -58,12 +58,11 @@
                     </div>
                 </section>
                 <section class="direito">
-                    <img src="./img/E11-3505-006_zoom1.jpg" alt="imagem do produto, salto alto">
+                    <img src="./img/E11-3505-006_zoom1.jpg" alt="Imagem do produto, Tamanco Salto Alto">
                 </section>                
             </div>
         </div>
     </main>
-
     <footer>
         <p>SMART SALE ©2019</p>
     </footer>
