--- a/home.html
+++ b/home.html
@@ -74,25 +74,25 @@
                 <div class="card">
                     <a href="./filtroProdutos.html">
                         <h4>Cereais</h4>
-                        <img src="./img/img1.png" alt="">
+                        <img src="./img/img1.png" alt="Foto de Feijão Branco e Feijão Preto">
                     </a>
                 </div>
                 <div class="card">
                     <a href="./filtroProdutos.html">
                         <h4>Legumes</h4>
-                        <img src="./img/img2.png" alt="">
+                        <img src="./img/img2.png" alt="Foto de batatas pequenas">
                     </a>
                 </div>
                 <div class="card">
                     <a href="./filtroProdutos.html">
                         <h4>Carnes</h4>
-                        <img src="./img/img3.png" alt="">
+                        <img src="./img/img3.png" alt="Foto de bife grelhado">
                     </a>
                 </div>
                 <div class="card">
                     <a href="./filtroProdutos.html">
                         <h4>Vegetais</h4>
-                        <img src="./img/img7.png" alt="">
+                        <img src="./img/img7.png" alt="Foto de vários brócolis juntos">
                     </a>
                 </div>
             </section>
@@ -124,10 +124,10 @@
                 <h4>Instituições beneficiadas</h4>
             </section>
             <div class="ongs">
-                <a href="ONG's.html"><img src="./img/ongs/ong1.png" alt=""></a>
-                <a href="ONG's.html"><img src="./img/ongs/ong2.png" alt=""></a>
-                <a href="ONG's.html"><img src="./img/ongs/ong3.png" alt=""></a>
-                <a href="ONG's.html"><img src="./img/ongs/ong4.png" alt=""></a>
+                <a href="ONG's.html"><img src="./img/ongs/ong1.png" alt="Foto da Logo da ONG Mais"></a>
+                <a href="ONG's.html"><img src="./img/ongs/ong2.png" alt="Foto da Logo da ONG AMAI - Associação Menorita de Ação Integral"></a>
+                <a href="ONG's.html"><img src="./img/ongs/ong3.png" alt="Foto da Logo da ONG Logo Name"></a>
+                <a href="ONG's.html"><img src="./img/ongs/ong4.png" alt="Foto da Logo da ONG Logo Name"></a>
             </div>
         </section>
         <div class="pdt">
