--- a/cadastrodeprodutovenda.html
+++ b/cadastrodeprodutovenda.html
@@ -244,34 +244,37 @@
 <body>
     <header>
         <div class="contHeader">
-        <div class="container">
-            <div class="ca">
-                <div class="logo">
-                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
+            <div class="container">
+                <div class="ca">
+                    <div class="logo">
+                        <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale"
+                                alt="logo smart sale"></a>
+                    </div>
+                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
+                        aria-label="Faça uma busca" name="search">
+                    <div class="botao-login">
+                        <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login"
+                                title="Faça login" id="entrar">
+                            <p>Entrar</p>
+                        </a>
+                    </div>
                 </div>
-                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
-                <div class="botao-login">
-                    <a href="cadastroelogin.html    "><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
-                        <p>Entrar</p>
-                    </a>
-                </div>
+                <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
+                <a class="btn-close"><i class="fa fa-times"></i></a>
+                <nav>
+                    <div class="menu-centro">
+                        <ul class="menu">
+                            <li><a href="home.html" title="Smart sale home">Home</a></li>
+                            <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
+                            <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                            <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
+                            <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
+                            <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
+                            <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-            <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
-            <a class="btn-close"><i class="fa fa-times"></i></a>
-            <nav>
-                <div class="menu-centro">
-                    <ul class="menu">
-                        <li><a href="home.html" title="Smart sale home">Home</a></li>
-                        <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
-                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
-                        <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
-                        <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
         </div>
     </header>
     <main>
