Finalizado preenchimento de ALT vazio nas páginas

--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -75,7 +75,7 @@
                     <p class="relacionados">Produtos Relacionados</p>
                     <div class="produtos">
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
@@ -87,7 +87,7 @@
                             </div>
                         </div>
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
@@ -99,7 +99,7 @@
                             </div>
                         </div>
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
@@ -111,7 +111,7 @@
                             </div>
                         </div>
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
@@ -123,7 +123,7 @@
                             </div>
                         </div>
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
@@ -135,7 +135,7 @@
                             </div>
                         </div>
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
@@ -159,7 +159,7 @@
                             </div>
                         </div>
                         <div class="cardProduto">
-                            <img src="./img/download.jpg" alt="Feijão A">
+                            <img src="./img/download.jpg" alt="Feijão Codil">
                             <div class="textoCard">
                                 <p>Feijão Codil</p>
                                 <p>R$ 10,00</p>
