--- a/perfil.html
+++ b/perfil.html
@@ -50,7 +50,7 @@
             <h2>Débora Nascimento</h2>
             <div class="cima">
                 <section class="esquerdo">
-                    <img src="img/Débora.jpg" alt="foto de perfil do usuario">
+                    <img src="img/Débora.jpg" alt="Foto de perfil do usuario">
                 </section>
 
                 <section class="direito">
