--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -21,7 +21,7 @@
                     <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
                         aria-label="Faça uma busca" name="search">
                     <div class="botao-login">
-                        <a href="cadastroelogin.html"><img src="img/avatar.png" alt="Link para fazer login"
+                        <a href="loginCadastro.html"><img src="img/avatar.png" alt="Link para fazer login"
                                 title="Faça login" id="entrar">
                             <p>Entrar</p>
                         </a>
