--- a/PerguntasFrequentes.html
+++ b/PerguntasFrequentes.html
@@ -55,12 +55,10 @@
                     <div class="texto_perguntasfrequentes">
 
                         <h2>Como fazer compras na aplicação?</h2>
-                        <p>Para fazer suas compras na aplicação você deve clicar no botão para reservar o produto
-                            desejado.</p>
+                        <p>Ao escolher o produto que você queira obter, clique no botão para fazer a reserva, assim, ao dirigir-se ao vendedor e pagar pelo produto, você o terá obtido.</p>
 
                         <h2>Como vendo minhas mercadorias?</h2>
-                        <p>Basta você efetuar um cadastro de vendedor na página de login (é necessário um CNPJ) e
-                            cadastrar suas mercadorias.</p>
+                        <p>Para anunciar seus produtos, faça um cadastro de vendedor (CNPJ é necessário) e anuncie seus produtos. Você também pode optar por encaminhar seu produto para doação se não for vendido em determinado tempo ou encaminhar diretamente a alguma ONG na região.</p>
 
                         <h2>Como o produto chega até mim?</h2>
                         <p>Após ter feita a reserva, você efetua o pagamento e retira seu produto com o próprio
@@ -77,6 +75,9 @@
                         </h2>
                         <p>Você pode conferir as ONGs beneficiadas na página ONGs.
                         </p>
+
+                        <h2>Preciso ter conta ou fazer login para ver as ofertas?</h2>
+                        <p>Você pode consultar as ofertas do site sem precisar efetuar login ou cadastro, apenas se você quiser reservar algum produto.</p>
 
                         <!-- <h2>Pergunta 6</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatem perspiciatis
