Texto de navegação adicionado

--- a/home.html
+++ b/home.html
@@ -61,19 +61,8 @@
                                 <img src="./img/img5.png" alt="Mãe cozinhando com a filha pequena" class="img-1">
                             </div>
                             <section class="txthome">
-                                <h3>Objetivo</h3>
-                                <p>O objetivo dessa aplicação trás ofertas de produtos até nossos clientes. Ofertas
-                                    essas de produtos com data de validade próximas, portanto, com um preço mais
-                                    acessível. Ótimo para quem quer economizar e evitar que produtos não tenham um
-                                    destino sem consumo. Desenvolvido pela empresa -Faivi-, apresenta soluções
-                                    envolvendo doações para ONGs e até mesmo um ranking de vendedores e clientes.
-
-                                    Há vantagens de se utilizar a Smart Sale, entre elas a diminuição do desperdício que
-                                    muitos produtos sofrem ao não serem consumidos ou descartados por perecerem. Com
-                                    esta solução, estes produtos são consumidos antes de perecerem, sejam por
-                                    consumidores ou ONGs. Outra vantagem é a possibilidade de encontrar produtos em
-                                    oferta e com um preço mais acessível. Além desses benefícios, um ranking apresenta a
-                                    colocação de quem utiliza a aplicação e efetua doações.
+                                <h3>Bem vindo (a) à Smart Sale!</h3>
+                                <p>Aqui você poderá efetuar compras de produtos mais baratos e ainda evitar desperdício por baixa movimentação de estoque. Para começar, você pode olhar as ofertas dos anunciantes e, se tiver interesse, efetuar a reserva da mesma e retirar com o vendedor. Filtre por região, faça a busca por um produto específico de seu interesse ou opte pelos produtos com vencimento mais próximo.
                                 </p>
                             </section>
                         </div>
