--- a/cadastroelogin.html
+++ b/cadastroelogin.html
@@ -8,7 +8,7 @@
     <title>Cadastro e Login</title>
     <link rel="stylesheet" href="css/final.css">
     <style>
-        :root {
+        /* :root {
             --roxo: #A200CB;
         }
 
@@ -167,7 +167,7 @@
                 height: auto;
                 width: 350px;
             }
-        }
+        } 
     </style>
     <style>
 
