Pagina Quem Somos alterada

--- a/quemsomos.html
+++ b/quemsomos.html
@@ -7,68 +7,104 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Quem somos</title>
     <link rel="stylesheet" href="css/final.css">
+    <style>
+        main {
+            background-color: transparent;
+        }
+    </style>
 </head>
+
 <body>
     <header>
         <div class="contHeader">
-        <div class="container">
-            <div class="ca">
-                <div class="logo">
-                    <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale" alt="logo smart sale"></a>
+            <div class="container">
+                <div class="ca">
+                    <div class="logo">
+                        <a href="home.html"><img src="img/Agrupar 110.png" title="Home Smart Sale"
+                                alt="logo smart sale"></a>
+                    </div>
+                    <input type="search" placeholder="Buscar produtos, marcas e muito mais ..."
+                        aria-label="Faça uma busca" name="search">
+                    <div class="botao-login">
+                        <a href="loginCadastro.html"><img src="img/avatar.png" alt="Link para fazer login"
+                                title="Faça login" id="entrar">
+                            <p>Entrar</p>
+                        </a>
+                    </div>
                 </div>
-                <input type="search" placeholder="Buscar produtos, marcas e muito mais ..." aria-label="Faça uma busca" name="search">
-                <div class="botao-login">
-                    <a href="loginCadastro.html"><img src="img/avatar.png" alt="Link para fazer login" title="Faça login" id="entrar">
-                        <p>Entrar</p>
-                    </a>
-                </div>
+                <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
+                <a class="btn-close"><i class="fa fa-times"></i></a>
+                <nav>
+                    <div class="menu-centro">
+                        <ul class="menu">
+                            <li><a href="home.html" title="Smart sale home">Home</a></li>
+                            <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
+                            <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
+                            <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
+                            <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
+                            <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
+                            <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
+                        </ul>
+                    </div>
+                </nav>
             </div>
-            <button class="btn-menu"><i class="fa fa-bars fa-lg"></i></button>
-            <a class="btn-close"><i class="fa fa-times"></i></a>
-            <nav>
-                <div class="menu-centro">
-                    <ul class="menu">
-                        <li><a href="home.html" title="Smart sale home">Home</a></li>
-                        <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
-                        <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
-                        <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
-                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
-                        <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
-                        <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
         </div>
     </header>
     <main>
-        <div class="quemsomos_pag">
-            <div class="bannerquemsomos"></div>
-            <div class="container">
-            <div class="tudo">
-                <div class="caixao">
-                    <div class="one">
-                        <h2>Quem somos</h2>
-                        <p>
-                            A Smart Sale é uma aplicação de marketplace na área de tecnologia criada no dia 12 de agosto de
-                            2019 com o objetivo de atender a necessidade de pessoas que desejam vender seus produtos perto
-                            da data de validade, assim evitando perda de produtos.
+        <section class="quemsomos_tudo">
+            <div class="quemsomos_pag">
+                <div class="imagem_quemsomos">
+                    <section class="quemsomos_texto_one">
+                        <h1>Objetivo</h1>
+                        <p>O objetivo dessa aplicação trás ofertas de produtos até nossos clientes. Ofertas essas de
+                            produtos
+                            com data de validade próximas, portanto, com um preço mais acessível. Ótimo para os que
+                            querem
+                            economizar e evitar que produtos não tenham um destino sem consumo. Desenvolvido pela
+                            empresa
+                            -Faivi-, apresenta soluções envolvendo doações para ONGs e até mesmo um ranking de
+                            vendedores e
+                            clientes. Há vantagens de se utilizar a Smart Sale, entre elas a diminuição do desperdício
+                            que
+                            muitos produtos sofrem ao não serem consumidos ou descartados por perecerem. Com esta
+                            solução,
+                            estes
+                            produtos são consumidos antes de perecerem, sejam por consumidores ou ONGs. Outra vantagem é
+                            a
+                            possibilidade de encontrar produtos em oferta e com um preço mais acessível. Além desses
+                            benefícios,
+                            um ranking apresenta a colocação de quem utiliza a aplicação e efetua doações.
                         </p>
-                    </div>
-                    <div class="two">
-                        <h2>O que propomos</h2>
-                        <p>
-                            Propomos ajuda a pessoas que desejam vender seus produtos, seja alimento ou vestuário, de maneira
-                            segura e eficiente.
-                        </p>
-                    </div>
-                </div>
-                <div class="contImagem">
-                    <img src="img/União 19.png" alt="Imagem ampliada do Logo do Site">
+                    </section>
                 </div>
             </div>
-        </div>
-        </div>
+            <div class="quemsomos_partetwo">
+                <section class="quemsomos_texto_two">
+                    <div class="quemsomos_esquerdo">
+                        <h2>Quem somos</h2>
+                        <p>
+                            A imfroma é uma plataforma que conecta pessoas a exp
+                            eriências únicas, desde o momento de descoberta à reali
+                            zação do evento. Através da tecnologia, possibilitamos q
+                            ue organizadores possam criar, organizar, gerir e divulgar e
+                            ventos, proporcionando ao participante uma pluralidade.
+                        </p>
+                        <h2>O que propomos</h2>
+                        <p>
+                            A imfroma é uma plataforma que conecta pessoas a exp
+                            eriências únicas, desde o momento de descoberta à reali
+                            zação do evento. Através da tecnologia, possibilitamos q
+                            ue organizadores possam criar, organizar, gerir e divulgar e
+                            ventos, proporcionando ao participante uma pluralidade.
+                        </p>
+                    </div>
+                    <div class="quemsomos_direito">
+                        <img src="./img/União 19.png" alt="Logo roxo Smart Sale">
+                    </div>
+                </section>
+            </div>
+        </section>
+
     </main>
     <footer>
         <p>SMART SALE ©2019</p>
