Ordem de conteudo e título do link 'categorias', alterados

--- a/cadastrodeprodutodoacao.html
+++ b/cadastrodeprodutodoacao.html
@@ -245,7 +245,7 @@
                         <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
                         <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
                         <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
-                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
+                        <li><a href="filtroProdutos.html" title="Smart sale categorias">Ofertas</a></li>
                         <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
                         <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
                     </ul>
