--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                             <li><a href="quemsomos.html" title="Smart sale quem somos">Quem somos</a></li>
                             <li><a href="ONG's.html" title="Smart sale ongs">ONGs</a></li>
                             <li><a href="paginaRanking.html" title="Smart sale ranking">Ranking</a></li>
-                            <li><a href="filtroProdutos.html" title="Smart sale categorias">Categorias</a></li>
+                            <li><a href="filtroProdutos.html" title="Smart sale categorias">Ofertas</a></li>
                             <li><a href="perfil.html" title="Smart sale perfil">Perfil</a></li>
                             <li><a href="PerguntasFrequentes.html" title="Smart sale faq">FAQ</a></li>
                         </ul>
@@ -69,73 +69,10 @@
                     </div>
                 </div>
             </div>
-            <div class="container" id="white">
-                <h3>Categorias</h3>
-                <section class="cardhome">
-                    <div class="card">
-                        <a href="./filtroProdutos.html">
-                            <h4>Cereais</h4>
-                            <img src="./img/img1.png" alt="Foto de Feijão Branco e Feijão Preto">
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="./filtroProdutos.html">
-                            <h4>Legumes</h4>
-                            <img src="./img/img2.png" alt="Foto de batatas pequenas">
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="./filtroProdutos.html">
-                            <h4>Carnes</h4>
-                            <img src="./img/img3.png" alt="Foto de bife grelhado">
-                        </a>
-                    </div>
-                    <div class="card">
-                        <a href="./filtroProdutos.html">
-                            <h4>Vegetais</h4>
-                            <img src="./img/img7.png" alt="Foto de vários brócolis juntos">
-                        </a>
-                    </div>
-                </section>
-                <div class="ver">
-                    <a href="./filtroProdutos.html">Ver mais</a>
-                </div>
-            </div>
-            <div class="linha">
-                <hr class="one">
-            </div>
-            <div class="roxo">
-                <div class="container">
-                    <section class="rank">
-                        <p>RANKING</p>
-                        <div class="branco"><img src="./img/icons/crown.png " alt="Coroa de Ouro" class="coroa">
-                            <p>Arthur Bruno - 100pts</p>
-                        </div>
-                        <div class="branco"><img src="./img/icons/crown-1.png" alt="Coroa de Prata" class="coroa">
-                            <p>Gabriel Silva - 90pts</p>
-                        </div>
-                        <div class="branco"><img src="./img/icons/crown-2.png " alt="Coroa de Bronze" class="coroa">
-                            <p>Kaique Santos - 80pts</p>
-                        </div>
-                    </section>
-                </div>
-            </div>
-            <section class="container">
-                <section class="tongs">
-                    <h4>Instituições beneficiadas</h4>
-                </section>
-                <div class="ongs">
-                    <a href="ONG's.html"><img src="./img/ongs/ong1.png" alt="Foto da Logo da ONG Mais"></a>
-                    <a href="ONG's.html"><img src="./img/ongs/ong2.png"
-                            alt="Foto da Logo da ONG AMAI - Associação Menorita de Ação Integral"></a>
-                    <a href="ONG's.html"><img src="./img/ongs/ong3.png" alt="Foto da Logo da ONG Logo Name"></a>
-                    <a href="ONG's.html"><img src="./img/ongs/ong4.png" alt="Foto da Logo da ONG Logo Name"></a>
-                </div>
-            </section>
             <div class="pdt">
-                <h4>Produtos</h4>
                 <div class="container">
                     <div class="pdts2">
+                        <h3>Produtos</h3>
                         <section class="cardhome2">
                             <div class="card">
                                 <a href="paginaProduto.html" class="pdt1"><img src="./img/pdts/6.png"
@@ -207,6 +144,66 @@
                     </div>
                 </div>
             </div>
+            <div class="container" id="white">
+                <h3>Categorias</h3>
+                <section class="cardhome">
+                    <div class="card">
+                        <a href="./filtroProdutos.html">
+                            <h4>Cereais</h4>
+                            <img src="./img/img1.png" alt="Foto de Feijão Branco e Feijão Preto">
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="./filtroProdutos.html">
+                            <h4>Legumes</h4>
+                            <img src="./img/img2.png" alt="Foto de batatas pequenas">
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="./filtroProdutos.html">
+                            <h4>Carnes</h4>
+                            <img src="./img/img3.png" alt="Foto de bife grelhado">
+                        </a>
+                    </div>
+                    <div class="card">
+                        <a href="./filtroProdutos.html">
+                            <h4>Vegetais</h4>
+                            <img src="./img/img7.png" alt="Foto de vários brócolis juntos">
+                        </a>
+                    </div>
+                </section>
+                <div class="ver">
+                    <a href="./filtroProdutos.html">Ver mais</a>
+                </div>
+            </div>
+            <div class="roxo">
+                <div class="container">
+                    <section class="rank">
+                        <p>RANKING</p>
+                        <div class="branco"><img src="./img/icons/crown.png " alt="Coroa de Ouro" class="coroa">
+                            <p>Arthur Bruno - 100pts</p>
+                        </div>
+                        <div class="branco"><img src="./img/icons/crown-1.png" alt="Coroa de Prata" class="coroa">
+                            <p>Gabriel Silva - 90pts</p>
+                        </div>
+                        <div class="branco"><img src="./img/icons/crown-2.png " alt="Coroa de Bronze" class="coroa">
+                            <p>Kaique Santos - 80pts</p>
+                        </div>
+                    </section>
+                </div>
+            </div>
+            <section class="container">
+                <section class="tongs">
+                    <h4>Instituições beneficiadas</h4>
+                </section>
+                <div class="ongs">
+                    <a href="ONG's.html"><img src="./img/ongs/ong1.png" alt="Foto da Logo da ONG Mais"></a>
+                    <a href="ONG's.html"><img src="./img/ongs/ong2.png"
+                            alt="Foto da Logo da ONG AMAI - Associação Menorita de Ação Integral"></a>
+                    <a href="ONG's.html"><img src="./img/ongs/ong3.png" alt="Foto da Logo da ONG Logo Name"></a>
+                    <a href="ONG's.html"><img src="./img/ongs/ong4.png" alt="Foto da Logo da ONG Logo Name"></a>
+                </div>
+            </section>
     </main>
     <footer>
         <p>SMART SALE ©2019</p>
