Filtro por região adicionado e disposição dos produtos alterada

--- a/filtroProdutos.html
+++ b/filtroProdutos.html
@@ -51,15 +51,17 @@
                         <h2>Filtrar</h2>
                         <div class="innerFiltros">
                             <div class="divSelects">
-                                <label>Estado:</label>
-                                <select name="estado" id="">
-                                    <option value="sp">SP</option>
-                                </select>
                                 <label>Cidade:</label>
+                                <select name="estado" id="">
+                                    <option value="sp">São Paulo</option>
+                                </select>
+                                <label>Bairro/Região:</label>
                                 <select name="cidade" id="">
-                                    <option value="sao-paulo">São Paulo</option>
+                                    <option value="guaianases">Guaianases</option>
                                     <option value="suzano">Suzano</option>
-                                    <option value="osasco">Osasco</option>
+                                    <option value="taboao_da_serra">Taboão da Serra</option>
+                                    <option value="mogi_das_cruzes">Mogi das Cruzes</option>
+                                    <option value="santo_andre">Santo André</option>
                                 </select>
                             </div>
                             <button class="btnAplicarFiltros">Aplicar</button>
