Cadastro e Login e Login ajeitadas

--- a/loginCadastro.html
+++ b/loginCadastro.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Cadastro e Login</title>
+    <title>Login</title>
     <link rel="stylesheet" href="css/final.css">
 </head>
 
@@ -43,7 +43,7 @@
         </div>
     </header>
     <main>
-        <div class="cadastroelogin_pag">
+        <div class="login_pag">
         <!-- <div class="container"> -->
         <div class="cards_cadlog">
             <div class="imgLoginCad"></div>
