Pagina do Produto com Regiao

--- a/paginaProduto.html
+++ b/paginaProduto.html
@@ -55,14 +55,15 @@
                         </div>
                     </div>
                     <div class="direito">
-                        <div>
+                        <div class="informacoes_produto">
                             <p class="nomeProduto">Feijão Carioca Tipo 1 - 1Kg</p>
                             <p class="precoProduto">R$5,00</p>
+                            <b><p id="regiao">Taboão da Serra</p></b>
                         </div>
                         <div class="contQuantBotoes">
                             <div class="quantidade">
                                 <label>Quantidade</label>
-                                <input type="number" name="quantidade" id="">
+                                <input type="number" name="quantidade">
                             </div>
                             <div class="botoes">
                                 <a class="botaoReservar" href="finalDaReserva.html">Reservar</a>
